--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Techlab software for employees",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build && node server.js"
   },
   "author": "Kushagra Srivastava",
   "license": "ISC",
