--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "csv-writer": "^1.6.0",
     "ejs": "^3.1.2",
     "express": "^4.17.1",
