--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "moment": "^2.25.3",
     "mongoose": "^5.9.10",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "request": "^2.88.2",
     "request-ip": "^2.1.3",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "xoauth2": "^1.2.0"
   }
 }
