--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "fast-csv": "^4.1.3",
+    "macaddress": "^0.5.0",
     "method-override": "^3.0.0",
     "moment": "^2.25.3",
     "mongoose": "^5.9.10",
