--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
+    "connect-flash": "^0.1.1",
     "csv-writer": "^1.6.0",
     "easy-currencies": "^1.3.1",
     "ejs": "^3.1.2",
